--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 }
 
 tasks.named('test') {
+	finalizedBy 'jacocoTestReport'
 	useJUnitPlatform()
 }
 
@@ -48,16 +49,32 @@ jacocoTestReport {
 	reports {
 		html.enabled true
 	}
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it,
+					exclude: ['com/wlstjd/searchblog/SearchblogApplication.class'])
+		}))
+	}
+
+	finalizedBy 'jacocoTestCoverageVerification'
 }
 
 jacocoTestCoverageVerification {
 	violationRules {
 		rule {
+			excludes = ['com.wlstjd.searchblog.SearchblogApplication']
+
 			element = 'CLASS'
 			limit {
 				counter = 'BRANCH'
 				value = 'COVEREDRATIO'
-				minimum = 0.80
+				minimum = 0.90
+			}
+
+			limit {
+				counter = 'LINE'
+				value = 'COVEREDRATIO'
+				minimum = 0.90
 			}
 		}
 	}
