Token 스텁 사용부분 Properties로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=create
+
+kakao.api.url=https://dapi.kakao.com/v2/search/blog
+kakao.api.token=KakaoAK f5aca1c30f55e20e989e8d0475a92956
