--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=create
 
 kakao.api.url=https://dapi.kakao.com/v2/search/blog
 kakao.api.token=KakaoAK f5aca1c30f55e20e989e8d0475a92956
+naver.api.url=https://openapi.naver.com/v1/search/blog.json
+naver.api.id=oqAza7eOTcE2KAjgP5pI
+naver.api.Secret=qij31cAkNx
